2017-05-23  Natalia Portillo  <claunia@claunia.com>

	* Inquiry.cs: Detect Kreon firmware.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* PMA.cs:
	* TOC.cs:
	* CSD.cs:
	* PRI.cs:
	* PFI.cs:
	* DMI.cs:
	* BCA.cs:
	* DDS.cs:
	* RMD.cs:
	* LisaTag.cs:
	* OCR.cs:
	* UDI.cs:
	* CID.cs:
	* ATIP.cs:
	* AACS.cs:
	* ADIP.cs:
	* CPRM.cs:
	* DMI.cs:
	* Enums.cs:
	* EVPD.cs:
	* Sector.cs:
	* Spare.cs:
	* Enums.cs:
	* Layers.cs:
	* ISO.cs:
	* Sense.cs:
	* Types.cs:
	* Errors.cs:
	* DI.cs:
	* FullTOC.cs:
	* Session.cs:
	* CIS.cs:
	* Enums.cs:
	* Modes.cs:
	* DDS.cs:
	* BCA.cs:
	* CSS&CPRM.cs:
	* Amiga.cs:
	* Identify.cs:
	* Enums.cs:
	* Types.cs:
	* Inquiry.cs:
	* Enums.cs:
	* Apple2.cs:
	* Spare.cs:
	* CPRM.cs:
	* Cartridge.cs:
	* AACS.cs:
	* Enums.cs:
	* ExtendedCSD.cs:
	* System34.cs:
	* Hybrid.cs:
	* AppleSony.cs:
	* Commodore.cs:
	* VendorString.cs:
	* CID.cs:
	* System3740.cs:
	* CSD.cs:
	* Features.cs:
	* VendorCode.cs:
	* Cartridge.cs:
	* CDTextOnLeadIn.cs:
	* VendorString.cs:
	* OCR.cs:
	* SCR.cs:
	* ModesEncoders.cs:
	* Perpendicular.cs:
	* BlockLimits.cs:
	* WriteProtect.cs:
	* DensitySupport.cs:
	* AssemblyInfo.cs:
	* DiscInformation.cs:
	* VendorString.cs:
	* DiscStructureCapabilities.cs: Updated copyright string.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* AssemblyInfo.cs: Bumped version to 3.3.99.0.

2017-05-19  Natalia Portillo  <claunia@claunia.com>

	* DiscImageChef.Decoders.csproj: Upped version to 3.3.99.0. Do
	  not use version from solution on library projects.

2016-10-22  Natalia Portillo  <claunia@claunia.com>

	* OCR.cs:
	* CID.cs:
	* CSD.cs:
	* ExtendedCSD.cs:
	* VendorString.cs:
	* SCR.cs:
	* CID.cs:
	* CSD.cs:
	* OCR.cs:
	* DiscImageChef.Decoders.csproj:
	* VendorString.cs: Add MMC/SecureDigital device support. Not
	yet used because of a bad implementation of SEND_CSD and
	SEND_CID commands (TODO).

2016-10-17  Natalia Portillo  <claunia@claunia.com>

	* CIS.cs:
	* Enums.cs:
	* Types.cs:
	* VendorCode.cs: